SET(CMAKE_SYSTEM_NAME Windows)
SET(CMAKE_C_FLAGS "-g -gdwarf-version")

PROJECT(hmonitor)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_LANGUAGE(ASM)

FIND_PACKAGE(CMSIS REQUIRED)
FIND_PACKAGE(STM32BSP COMPONENTS lcd sdram ili9341 REQUIRED)
FIND_PACKAGE(STM32HAL COMPONENTS gpio tim spi sdram fmc ltdc dma dma2d uart rcc pwr REQUIRED)
FIND_PACKAGE(FreeRTOS COMPONENTS kernel REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${CMAKE_CURRENT_SOURCE_DIR}/inc
    ${CMSIS_INCLUDE_DIRS}
    ${STM32HAL_INCLUDE_DIR}
    ${STM32BSP_INCLUDE_DIR}
    ${FREERTOS_kernel_INCLUDE_DIR}
)

SET(PROJECT_SOURCES
    src/main.c
    src/stm32f4xx_hal_timebase_tim.c
    src/stm32f4xx_it.c
)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}
    ${PROJECT_SOURCES}
    ${CMSIS_SOURCES}
    ${STM32HAL_SOURCES}
    ${STM32BSP_SOURCES}
    ${FREERTOS_kernel_SOURCES})

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
